aster/tests/fail/context-free.astr
module context-free

attributes

  def context-free down foo = id
